tests/ui/resolve/token-error-correct-2.stderr
error: mismatched closing delimiter: `)`
  --> $DIR/token-error-correct-2.rs:4:12
   |
LL |     if foo {
   |            ^ unclosed delimiter
LL |     )
   |     ^ mismatched closing delimiter

error: aborting due to 1 previous error

